--- a/Registry.toml
+++ b/Registry.toml
@@ -4,3 +4,4 @@ repo = "https://github.com/JuliaPatents/Registry.git"
 description = "Julia package ecosystem for handling patent data"
 
 [packages]
+b32246e4-6301-4a4b-8d75-0b3972dc1401 = { name = "PatentsBase", path = "P/PatentsBase" }
