--- a/Registry.toml
+++ b/Registry.toml
@@ -5,3 +5,4 @@ description = "Julia package ecosystem for handling patent data"
 
 [packages]
 b32246e4-6301-4a4b-8d75-0b3972dc1401 = { name = "PatentsBase", path = "P/PatentsBase" }
+f4645b53-4539-42ef-9ea4-c70e89c10300 = { name = "PatentsLens", path = "P/PatentsLens" }
