--- a/P/PatentsBase/Package.toml
+++ b/P/PatentsBase/Package.toml
@@ -1,3 +1,3 @@
 name = "PatentsBase"
 uuid = "b32246e4-6301-4a4b-8d75-0b3972dc1401"
-repo = "git@github.com:JuliaPatents/PatentsBase.jl.git"
+repo = "https://github.com/JuliaPatents/PatentsBase.jl.git"
