--- a/P/PatentsLandscapes/Package.toml
+++ b/P/PatentsLandscapes/Package.toml
@@ -1,3 +1,3 @@
 name = "PatentsLandscapes"
 uuid = "e90634b4-20e9-4340-8903-37f02b1a8a83"
-repo = "git@github.com:JuliaPatents/PatentsLandscapes.jl.git"
+repo = "https://github.com/JuliaPatents/PatentsLandscapes.jl.git"
