--- a/P/PatentsBase/Versions.toml
+++ b/P/PatentsBase/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "b03945fa6df9e2179645e6b2573c49c12bd75ecc"
+
+["1.0.0"]
+git-tree-sha1 = "532eed3e9b8e9e2c4812e099ed187dfc83631b06"
