--- a/P/PatentsLandscapes/Deps.toml
+++ b/P/PatentsLandscapes/Deps.toml
@@ -1,2 +1,6 @@
 [0]
 PatentsBase = "b32246e4-6301-4a4b-8d75-0b3972dc1401"
+
+["0.1.1-0"]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
