--- a/P/PatentsLens/Versions.toml
+++ b/P/PatentsLens/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "3ba46522edb39bac16704ff66fd9e86823ee42d4"
+
+["2.0.0"]
+git-tree-sha1 = "a08bf9d68f44fcc578bd51c7280987b7fabdbe11"
