--- a/P/PatentsBase/Versions.toml
+++ b/P/PatentsBase/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "b03945fa6df9e2179645e6b2573c49c12bd75ecc"
 
 ["1.0.0"]
 git-tree-sha1 = "532eed3e9b8e9e2c4812e099ed187dfc83631b06"
+
+["1.0.1"]
+git-tree-sha1 = "873543116d88041de10ce60f4121343c7c2f4523"
