New version: PatentsBase v0.1.1
UUID: b32246e4-6301-4a4b-8d75-0b3972dc1401
Repo:
Tree: 38d8fddcd65ae4bdb048688b9531cc70e3dd90a0

--- a/P/PatentsBase/Versions.toml
+++ b/P/PatentsBase/Versions.toml
@@ -1,6 +1,9 @@
 ["0.1.0"]
 git-tree-sha1 = "b03945fa6df9e2179645e6b2573c49c12bd75ecc"
 
+["0.1.1"]
+git-tree-sha1 = "38d8fddcd65ae4bdb048688b9531cc70e3dd90a0"
+
 ["1.0.0"]
 git-tree-sha1 = "532eed3e9b8e9e2c4812e099ed187dfc83631b06"
 
