--- a/P/PatentsBase/Deps.toml
+++ b/P/PatentsBase/Deps.toml
@@ -1,3 +1,6 @@
 [0-1]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
+
+["0.1.1-0"]
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
