New version: PatentsLandscapes v0.1.2
UUID: e90634b4-20e9-4340-8903-37f02b1a8a83
Repo:
Tree: cdf4f9d075741fc4ecda2db631d42698633cc8a6

--- a/P/PatentsLandscapes/Versions.toml
+++ b/P/PatentsLandscapes/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "606c93911a1cf5c895d082bce00d80da9377acd7"
 
 ["0.1.1"]
 git-tree-sha1 = "6e690b46a9877ecf8e08b89ea192ef30dd8e61a9"
+
+["0.1.2"]
+git-tree-sha1 = "cdf4f9d075741fc4ecda2db631d42698633cc8a6"
