--- a/P/PatentsBase/Versions.toml
+++ b/P/PatentsBase/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "b03945fa6df9e2179645e6b2573c49c12bd75ecc"
 
 ["0.1.1"]
 git-tree-sha1 = "38d8fddcd65ae4bdb048688b9531cc70e3dd90a0"
+
+["0.1.2"]
+git-tree-sha1 = "e891aa9c0dbedc13ea88e83e287e16864f9221a8"
