New version: PatentsLens v0.2.0
UUID: f4645b53-4539-42ef-9ea4-c70e89c10300
Repo:
Tree: 77d14e533655f898c8c3eb3c77d79e945c505b58

--- a/P/PatentsLens/Versions.toml
+++ b/P/PatentsLens/Versions.toml
@@ -1,5 +1,8 @@
 ["0.1.0"]
 git-tree-sha1 = "3ba46522edb39bac16704ff66fd9e86823ee42d4"
 
+["0.2.0"]
+git-tree-sha1 = "77d14e533655f898c8c3eb3c77d79e945c505b58"
+
 ["2.0.0"]
 git-tree-sha1 = "a08bf9d68f44fcc578bd51c7280987b7fabdbe11"
