--- a/P/PatentsLens/Deps.toml
+++ b/P/PatentsLens/Deps.toml
@@ -7,6 +7,11 @@ PatentsBase = "b32246e4-6301-4a4b-8d75-0b3972dc1401"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 
+["0.2-0"]
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+PatentsLandscapes = "e90634b4-20e9-4340-8903-37f02b1a8a83"
+
 [2]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
