--- a/P/PatentsBase/Versions.toml
+++ b/P/PatentsBase/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "38d8fddcd65ae4bdb048688b9531cc70e3dd90a0"
 
 ["0.1.2"]
 git-tree-sha1 = "e891aa9c0dbedc13ea88e83e287e16864f9221a8"
+
+["0.1.3"]
+git-tree-sha1 = "3586c1cd8e939284efb1d417d97cbc4a42e5c2d7"
