--- a/P/PatentsLens/Versions.toml
+++ b/P/PatentsLens/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "3ba46522edb39bac16704ff66fd9e86823ee42d4"
 
 ["0.2.0"]
 git-tree-sha1 = "77d14e533655f898c8c3eb3c77d79e945c505b58"
+
+["0.2.1"]
+git-tree-sha1 = "62ada76d1cdc22439580e0e09f6411fb5237ae90"
