New version: PatentsBase v0.1.4
UUID: b32246e4-6301-4a4b-8d75-0b3972dc1401
Repo:
Tree: 94f5768a6533173ecc6833ebfd268de0ce880df4

--- a/P/PatentsBase/Versions.toml
+++ b/P/PatentsBase/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "e891aa9c0dbedc13ea88e83e287e16864f9221a8"
 
 ["0.1.3"]
 git-tree-sha1 = "3586c1cd8e939284efb1d417d97cbc4a42e5c2d7"
+
+["0.1.4"]
+git-tree-sha1 = "94f5768a6533173ecc6833ebfd268de0ce880df4"
