--- a/P/PatentsBase/Deps.toml
+++ b/P/PatentsBase/Deps.toml
@@ -4,3 +4,6 @@ StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 
 ["0.1.1-0"]
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
+
+["0.1.4-0"]
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
