--- a/P/PatentsLens/Versions.toml
+++ b/P/PatentsLens/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "77d14e533655f898c8c3eb3c77d79e945c505b58"
 
 ["0.2.1"]
 git-tree-sha1 = "62ada76d1cdc22439580e0e09f6411fb5237ae90"
+
+["0.2.2"]
+git-tree-sha1 = "3b743538b05ddf00009261c0346d62eed3d94579"
