New version: PatentsLens v0.2.3
UUID: f4645b53-4539-42ef-9ea4-c70e89c10300
Repo:
Tree: 77d7316306c7371fa4f1aa7ae04dc3678bca9a2f

--- a/P/PatentsLens/Versions.toml
+++ b/P/PatentsLens/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "62ada76d1cdc22439580e0e09f6411fb5237ae90"
 
 ["0.2.2"]
 git-tree-sha1 = "3b743538b05ddf00009261c0346d62eed3d94579"
+
+["0.2.3"]
+git-tree-sha1 = "77d7316306c7371fa4f1aa7ae04dc3678bca9a2f"
